[bdist_wheel]
universal=1


[metadata]
name = hepunits
author = Eduardo Rodrigues
author_email = eduardo.rodrigues@cern.ch
maintainer = Eduardo Rodrigues
maintainer_email = eduardo.rodrigues@cern.ch
description = Units and constants in the HEP system of units
long_description = file: README.rst
url = https://github.com/scikit-hep/hepunits
license = BSD-3-Clause
classifier =
    Topic :: Scientific/Engineering
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Development Status :: 5 - Production/Stable


[options]
python_requires = >=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*
include_package_data = True
zip_safe = False
packages: find:
package_dir =
    =src



[options.packages.find]
where = src


[options.package_data]
* = py.typed

[tool:pytest]
junit_family=xunit2
testpaths =
    tests
addopts = -Wd


[options.extras_require]
test =
  pytest >=4.6
  pytest-cov >=2.8.0
dev =
  pytest >=4.6
  pytest-cov >=2.8.0
all =
  pytest >=4.6
  pytest-cov >=2.8.0

[check-manifest]
ignore =
    src/hepunits/version.py
    .pre-commit-config.yaml

[mypy]
strict=True

[mypy-hepunits.version]
ignore_missing_imports = True


[flake8]
max-complexity = 12
ignore = E203, E231, E501, E722, W503, F401, F403, F405
select = C,E,F,W,B,B9,T
