[metadata]
name = hepunits
description = Units and constants in the HEP system of units
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/scikit-hep/hepunits
author = Eduardo Rodrigues
author_email = eduardo.rodrigues@cern.ch
maintainer = Eduardo Rodrigues
maintainer_email = eduardo.rodrigues@cern.ch
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Scientific/Engineering
keywords =
    HEP
    HEP system of units
    Units
    Constants

[options]
packages = find:
python_requires = >=3.7
include_package_data = True
package_dir =
    =src
zip_safe = False

[options.packages.find]
where = src

[options.extras_require]
all =
    pytest>=6
    pytest-cov>=2.8.0
dev =
    pytest>=6
    pytest-cov>=2.8.0
test =
    pytest>=6
    pytest-cov>=2.8.0

[options.package_data]
* = py.typed

[flake8]
extend-ignore = B950, E501
extend-select = B9
per-file-ignores =
    tests/*: T, F405, F403
